--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,26 +4,24 @@
     <title>Carly's blog</title> <!-- Giving the tag for the page a name -->
 </head>
 <body> <!-- Programming to show the information will be displayed on the screen-->
-    <p>Hi there!</p> <!-- Paragraph to state hello -->
-    <p>It works!</p> <!-- Paragraph to state it works -->
 
     <header> <!-- adding a title to the web page -->
         <h1><a href="/">Django Girls Blog</a></h1> <!-- settng up a important heading with a link to nowhere -->
     </header> <!-- closing the header -->
 
-    <article> <!-- use to setup a self-contained location in the document -->
+    {{ posts }} <!-- use to setup a self-contained location in the document -->
         <time>published: 14.06.2014, 12:14</time> <!-- stating the date and time -->
         <h2><a href="">My first post</a></h2> <!-- setting up a not so important heading with a link to nowhere -->
         <!-- Setting up a paragraph of information -->
         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    </article> <!-- Closing the self-contained section -->
+    {{ posts }} <!-- Closing the self-contained section -->
 
     <!-- Use the commment from above as these are the same just on a second self-contained document -->
-    <article>
+    {{ posts }}
         <time>published: 14.06.2014, 12:14</time>
         <h2><a href="">My second post</a></h2>
         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-    </article>
+    {{ posts }}
 
 </body> <!-- Closing the programming section-->
 </html> <!-- Closing the root element -->
