Fixed post_list view to pass post to template

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,9 +5,9 @@
 </head>
 <body> <!-- Programming to show the information will be displayed on the screen-->
 
-    <header> <!-- adding a title to the web page -->
-        <h1><a href="/">Django Girls Blog</a></h1> <!-- settng up a important heading with a link to nowhere -->
-    </header> <!-- closing the header -->
+<header>
+    <h1>/Django Girls Blog</a></h1>
+</header>
 
 {% for post in posts %}
     <article>
