--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -37,7 +37,7 @@ h4 {
 .top-menu,
 .top-menu:hover,
 .top-menu:visited {
-    color: #ffffff;
+    color: #9b2b83;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
