--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,31 +1,50 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Django Girls blog</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    </head>
-    <body>
-        <header class="page-header">
-            <div class="container">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_draft_list' %}" class="top-menu">{% include './icons/pencil-fill.svg'%}</a>
-                    <a href="{% url 'post_new' %}" class="top-menu">
-                        {% include './icons/file-earmark-plus.svg' %}
-                    </a>
-                {% endif %}
-                <h1><a href="/">Django Girls Blog</a></h1>
+
+<head>
+    <title>Django Girls blog</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+</head>
+
+<body>
+    <header class="page-header">
+        <div class="container">
+            {% if user.is_authenticated %}
+            <a href="{% url 'post_new' %}" class="top-menu">
+                {% include './icons/file-earmark-plus.svg' %}
+            </a>
+            <a href="{% url 'post_draft_list' %}" class="top-menu">{% include './icons/pencil-fill.svg'%}</a>
+            <p id="logout" class="top-menu"> <small>
+                    <form action="{% url 'logout' %}" method="post">
+                        {% csrf_token %}
+                    </form>
+
+                    <div id="logout" class="top-menu">
+                        Hello {{ user.username }}
+                        {% csrf_token %}
+                        <button type="submit" class="top-menu btn btn-link p-0 m-0 align-baseline">(Log out)</button>
+                        </form>
+                    </div>
+
+                </small></p>
+            {% else %}
+            <a href="{% url 'login' %}" class="top-menu">{% include './icons/lock-fill.svg' %}</a>
+            {% endif %}
+            <h1><a href="/">Django Girls Blog</a></h1>
+        </div>
+    </header>
+    <main class="content container">
+        <div class="row">
+            <div class="col">
+                {% block content %}
+                {% endblock %}
             </div>
-        </header>
-        <main class="content container">
-            <div class="row">
-                <div class="col">
-                    {% block content %}
-                    {% endblock %}
-                </div>
-            </div>
-        </main>
-    </body>
+        </div>
+    </main>
+</body>
+
 </html>
